--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html><head>
     <link rel="stylesheet" href="shlok-style.css">
+    <meta charset="UTF-8">
+    <title>ŞLOK</title>
 </head>
 <body><br><br><br><br><br><br><br><br>
     
